More clear description logic.

--- a/src/views/access_interface.ejs
+++ b/src/views/access_interface.ejs
@@ -5,7 +5,7 @@
 	<body>
 		<br />
 		<br />
-		The below is the Info of the Token Adam gives you to his account (maybe not full access though):
+		The below is the Info of the Tokens you give:
 		<br />
 		<hr style="border: 1px #B0C4DE solid;width:70%;" align="left"/>
 		<br />
@@ -23,14 +23,17 @@
 		<hr style="border: 1px #B0C4DE solid;width:70%;" align="left"/>
 		<br />
 		<br />
-		Now, let's use the Access Token to create a room so that you can chat with him: 
+		Ok, you have accepted the request and granted the permissions to me. All the process is complete now!
+		<br />
+		<br />
+		As an experience, you can use the above Access Token to create a demo room from below:
 		<br /><br />
 		<hr style="border: 1px #B0C4DE solid;width:70%;" align="left"/>
 		<form action="/actions/createAndJoinRoom" method="post">
 			<br /><br />
 			Room Name: <input type="text" name="roomName" value="Rock Spark Room"/> (Be used as room name, 2~20 characters. No special character allowed)
 			<br /><br />
-			Your Email: <input type="text" name="userEmail" value="Your own email"/> (Be used to add you into the room)
+			Email Address: <input type="text" name="userEmail" value="Email Address"/> (The email address of the person you want to add in)
 			<br /><br />
 			<input type="submit" value="submit"/>
 		</form>
