--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -13,6 +13,6 @@
 		<hr style="border: 1px #B0C4DE solid;width:50%;" align="left"/>
 		<br />
 		<br />
-		Next, click <a href="/" style="text-decoration:none;color:red">Here</a> to go to home page!
+		Next, click <a href="/" style="text-decoration:none;color:red">Here</a> to go to initial page!
 	</body>
 </html>
