--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,13 +2,13 @@
 	<head>
 	</head>
 	<body>
-		Get problem and want to talk with Adam Kong?
+		I want to request permissions of your Spark account. 
 		<br/><br/>
-		Ok, click <a href="/auth/spark" style="text-decoration:none;color:red">ME</a> to create a Spark room on behalf of Adam. 
+		Click <a href="/auth/spark" style="text-decoration:none;color:red">HERE</a> to start granting access. 
 		<br/><br/>
-		After clicking it, please input his email address <span style="text-decoration:none;color:red">adkong@cisco.com</span> to identify him.
+		After clicking it, please input your email address in the next page. 
 		<br/><br/>
-		You will be asked to join into to the room as well!
+		You will be prompted to accept the request later (The detailed access items will be listed out.).
 		<br />	
 		<br />
 		<br />	
@@ -18,7 +18,6 @@
 			<%=deleteRoom%>
 		<br />
 		<br />
-		You can click the above red ME to create another room if you still have any concern.
 		<%}%>
 	</body>
 </html>
