--- a/src/views/talk.ejs
+++ b/src/views/talk.ejs
@@ -4,20 +4,20 @@
 	<body>
 		<br />
 		<br />		
-		Ok, you should be in a room with him now. The room info:
+		Ok, you should be in a room with the owner of the email now. The room info:
 		<br />
 		<hr style="border: 1px #B0C4DE solid;width:70%;" align="left"/>
 		<br />
 		The room ID is: <%=newRoomID%>
 		<br />
 		<br />
-		The membershipID is: <%=membershipID%>
+		The person's membershipID is: <%=membershipID%>
 		<br />
 		<br />
 		<hr style="border: 1px #B0C4DE solid;width:70%;" align="left"/>
 		<br />
 		<br />
-		If your problem/question has been resolved, please click the below button to delete the room:
+		You can click the below button to delete the room:
 		<br />
 		<br />
 		<form action="/actions/deleteRoom" method="post">
