--- a/src/views/adminUpdateP.ejs
+++ b/src/views/adminUpdateP.ejs
@@ -33,8 +33,8 @@
 			<%}%>
 			<br /><br />
 			<input type="hidden" name="username" value="<%=username%>" />
-			New Password: <input type="text" name="password"/> (6 characters at least, or leave it as empty for no modification.)<br /><br />
-			Enter Again: <input type="text" name="re_password"/><br /><br />
+			New Password: <input type="password" name="password"/> (6 characters at least, or leave it as empty for no modification.)<br /><br />
+			Enter Again: <input type="password" name="re_password"/><br /><br />
 			Email: <input type="text" name="email" value="<%=email%>"/><br /><br /> 
 			<input type="reset" value="Reset"/>   <input type="submit" value="Update"/>
 		</form>
