--- a/src/views/signIn.ejs
+++ b/src/views/signIn.ejs
@@ -10,7 +10,7 @@
 		<br />Sign In<br /><br />	
 		<form action="/admin/signIn" method="post">
 			Username: <input type="text" name="username"/> (Only letter, number and underscore are allowed in username, within 3~20 characters!)<br /><br /> 
-			Password: <input type="text" name="password"/> (6 characters at least)<br /><br />
+			Password: <input type="password" name="password"/> (6 characters at least)<br /><br />
 			<input type="reset" value="Reset"/>   <input type="submit" value="Login"/>
 		</form>
 	</body>
