--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -15,8 +15,8 @@
 		<br />Sign Up A New Administrator (could add email verification by yourself here.) <span style="text-decoration:none;color:red">- Super Admin Only</span><br /><br />		
 		<form action="/admin/signUp" method="post">
 			Username: <input type="text" name="username"/> (Only letter, number and underscore are allowed in username, within 3~20 characters.)<br /><br /> 
-			Password: <input type="text" name="password"/> (6 characters at least)<br /><br />
-			Re-Enter: <input type="text" name="re_password"/><br /><br />
+			Password: <input type="password" name="password"/> (6 characters at least)<br /><br />
+			Re-Enter: <input type="password" name="re_password"/><br /><br />
 			Email: <input type="text" name="email"/><br /><br /> 
 			<input type="reset" value="Reset"/>   <input type="submit" value="Sign Up"/>
 		</form>
