--- a/src/views/superAdminUpdatePage.ejs
+++ b/src/views/superAdminUpdatePage.ejs
@@ -27,8 +27,8 @@
 			<br /><br />
 			<input type="hidden" name="userID" value="<%=userID%>">
 			<input type="hidden" name="superAdminID" value="<%=superAdminID%>">
-			New Password: <input type="text" name="password"/> (6 characters at least, or leave it as empty for no modification.)<br /><br />
-			Enter Again: <input type="text" name="re_password"/>
+			New Password: <input type="password" name="password"/> (6 characters at least, or leave it as empty for no modification.)<br /><br />
+			Enter Again: <input type="password" name="re_password"/>
 			<br /><br />
 			Email: <input type="text" name="email" value="<%=email%>"/><br /><br /> 
 			<input type="reset" value="Reset"/>   <input type="submit" value="Update"/>
